added new sections

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <!-- Logo -->
-      <a href="https://webstudio.com">WebStudio</a>
+      <a href="/index.html">WebStudio</a>
       <!--Navigation bar-->
       <nav>
         <ul>
@@ -29,6 +29,39 @@
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </div>
+      <!-- Description of our values-->
+      <section>
+        <div>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business <br />problem to walk away with
+            the <br />perfect and creative solution.
+          </p>
+        </div>
+        <div>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the <br />brand's audience for the best
+            price <br />
+            within the shortest possible time.
+          </p>
+        </div>
+        <div>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands that <br />present the strongest digital
+            growth <br />opportunities and minimize risk.
+          </p>
+        </div>
+        <div>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital <br />
+            experiences. We bring forth a deep <br />passion for
+            problem-solving.
+          </p>
+        </div>
+      </section>
       <!-- About us section-->
       <section>
         <h2>What are we doing</h2>
@@ -57,7 +90,7 @@
         </figure>
         <figure>
           <img
-            scr="images/portrait-2.jpg"
+            src="images/portrait-2.jpg"
             alt="portret barbat blond"
             width="80"
           />
@@ -92,12 +125,12 @@
     </main>
     <!-- Footer container -->
     <footer>
-      <a href="https://webstudio.com">WebStudio</a>
-      <p>
+      <a href="/index.html">WebStudio</a>
+      <address>
         Increase the flow of customers and <br />
         sales for your business with digital <br />
         marketing & growth solutions.
-      </p>
+      </address>
     </footer>
   </body>
 </html>
