added useful comments

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
     </header>
     <!-- Main container -->
     <main>
-      <div>
+      <!-- Hero section-->
+      <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-      </div>
+      </section>
       <!-- Description of our values-->
       <section>
         <div>
@@ -69,8 +70,7 @@
         <img src="images/smartphone.jpg" alt="smartphone" width="120" />
         <img
           src="images/computer-smartphone.jpg"
-          alt="un telefon in mana unei
-        persoane care lucreaza pe laptop"
+          alt="person using a smartphone and a laptop"
           width="120"
         />
       </section>
@@ -78,44 +78,28 @@
       <section>
         <h2>Our Team</h2>
         <figure>
-          <img
-            src="images/portrait-1.jpg"
-            alt="portret barbat brunet"
-            width="80"
-          />
+          <img src="images/portrait-1.jpg" alt="brunette man" width="80" />
           <figurecaption>
             <h4>Mark Guerrero</h4>
             <p>Product Designer</p>
           </figurecaption>
         </figure>
         <figure>
-          <img
-            src="images/portrait-2.jpg"
-            alt="portret barbat blond"
-            width="80"
-          />
+          <img src="images/portrait-2.jpg" alt="blonde man" width="80" />
           <figurecaption>
             <h4>Tom Ford</h4>
             <p>Frontend Developer</p>
           </figurecaption>
         </figure>
         <figure>
-          <img
-            src="images/portrait-3.jpg"
-            alt="portret femeie bruneta"
-            width="80"
-          />
+          <img src="images/portrait-3.jpg" alt="brunette woman" width="80" />
           <figurecaption>
             <h4>Camila Garcia</h4>
             <p>Marketing</p>
           </figurecaption>
         </figure>
         <figure>
-          <img
-            src="images/portrait-4.jpg"
-            alt="portret barbat saten"
-            width="80"
-          />
+          <img src="images/portrait-4.jpg" alt="brown hair man" width="80" />
           <figurecaption
             ><h4>Daniel Wilson</h4>
             <p>UI Designer</p>
@@ -125,7 +109,9 @@
     </main>
     <!-- Footer container -->
     <footer>
+      <!-- Logo-->
       <a href="/index.html">WebStudio</a>
+      <!-- Adress-->
       <address>
         Increase the flow of customers and <br />
         sales for your business with digital <br />
