--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   </head>
   <body>
     <header>
-      <!-- Logo -->
-      <a href="/index.html">WebStudio</a>
       <!--Navigation bar-->
       <nav>
+        <!-- Logo -->
+
+        <a href="/index.html">WebStudio</a>
         <ul>
           <li><a href="#Studio">Studio</a></li>
           <li><a href="#Portfoli">Portfolio</a></li>
@@ -18,10 +19,16 @@
         </ul>
       </nav>
       <!-- Contact information -->
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-      </div>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <!-- Main container -->
     <main>
@@ -32,91 +39,106 @@
       </section>
       <!-- Description of our values-->
       <section>
-        <div>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business <br />problem to walk away with
-            the <br />perfect and creative solution.
-          </p>
-        </div>
-        <div>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the <br />brand's audience for the best
-            price <br />
-            within the shortest possible time.
-          </p>
-        </div>
-        <div>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that <br />present the strongest digital
-            growth <br />opportunities and minimize risk.
-          </p>
-        </div>
-        <div>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital <br />
-            experiences. We bring forth a deep <br />passion for
-            problem-solving.
-          </p>
-        </div>
+        <h2>Our values</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business <br />problem to walk away
+              with the <br />perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the <br />brand's audience for the best
+              price <br />
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that <br />present the strongest
+              digital growth <br />opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital <br />
+              experiences. We bring forth a deep <br />passion for
+              problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
       <!-- About us section-->
       <section>
         <h2>What are we doing</h2>
-        <img src="images/computer.jpg" alt="computer" width="120" />
-        <img src="images/smartphone.jpg" alt="smartphone" width="120" />
-        <img
-          src="images/computer-smartphone.jpg"
-          alt="person using a smartphone and a laptop"
-          width="120"
-        />
+        <ul>
+          <li>
+            <img src="./images/computer.jpg" alt="computer" width="360" />
+          </li>
+          <li>
+            <img src="./images/smartphone.jpg" alt="smartphone" width="360" />
+          </li>
+          <li>
+            <img
+              src="./images/computer-smartphone.jpg"
+              alt="person using a smartphone and a laptop"
+              width="360"
+            />
+          </li>
+        </ul>
       </section>
       <!-- Team section -->
       <section>
         <h2>Our Team</h2>
-        <figure>
-          <img src="images/portrait-1.jpg" alt="brunette man" width="80" />
-          <figurecaption>
-            <h4>Mark Guerrero</h4>
+        <ul>
+          <li>
+            <img src="./images/portrait-1.jpg" alt="brunette man" width="264" />
+
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
-          </figurecaption>
-        </figure>
-        <figure>
-          <img src="images/portrait-2.jpg" alt="blonde man" width="80" />
-          <figurecaption>
-            <h4>Tom Ford</h4>
+          </li>
+          <li>
+            <img src="./images/portrait-2.jpg" alt="blonde man" width="264" />
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
-          </figurecaption>
-        </figure>
-        <figure>
-          <img src="images/portrait-3.jpg" alt="brunette woman" width="80" />
-          <figurecaption>
-            <h4>Camila Garcia</h4>
+          </li>
+          <li>
+            <img
+              src="./images/portrait-3.jpg"
+              alt="brunette woman"
+              width="264"
+            />
+
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
-          </figurecaption>
-        </figure>
-        <figure>
-          <img src="images/portrait-4.jpg" alt="brown hair man" width="80" />
-          <figurecaption
-            ><h4>Daniel Wilson</h4>
+          </li>
+          <li>
+            <img
+              src="./images/portrait-4.jpg"
+              alt="brown hair man"
+              width="264"
+            />
+
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
-          </figurecaption>
-        </figure>
+          </li>
+        </ul>
       </section>
     </main>
     <!-- Footer container -->
     <footer>
       <!-- Logo-->
-      <a href="/index.html">WebStudio</a>
-      <!-- Adress-->
-      <address>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+      <a href="./index.html">WebStudio</a>
+      <!-- description -->
+      <p>
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
-      </address>
+      </p>
     </footer>
   </body>
 </html>
